--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,5 +1,5 @@
 # Uncomment the following line to enable deep sleep
-# CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_SLEEP=y
 
 # Uncomment the following line to increase the keyboard's wireless range
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
@@ -12,5 +12,6 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n
 
-# Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
-# CONFIG_ZMK_USB_LOGGING=y
+# Enable Reporting Peripheral's Battery
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
