--- a/config/corne.conf
+++ b/config/corne.conf
@@ -8,9 +8,12 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
 
 # Enable ZMK Studio for Realtime Keymap Updates
-CONFIG_ZMK_STUDIO=y
-CONFIG_ZMK_STUDIO_LOCKING=n
+# CONFIG_ZMK_STUDIO=y
+# CONFIG_ZMK_STUDIO_LOCKING=n
 
 # Enable Reporting Peripheral's Battery
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+
+# Enable N Key Rollover
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
